--- a/index.html
+++ b/index.html
@@ -72,8 +72,33 @@
             <section class="cards__title">
                 <h3>PRINCIPALES PRODUCTOS</h3>
             </section>
-            <section class="cards">
-                <div class="card__body">
+            <section class="cards-container">
+                <div class="card">
+                    <img src="./images/img_tarjeteria_pp.jpeg" class="card-img-top" alt="Tarjetas personales">
+                    <div class="card-body">
+                      <h5 class="card-title">Tarjetas personales</h5>
+                      <p class="card-text">Sin dudas, uno de los productos más buscados son las tarjetas de presentación, que pueden ser utilizas para promocionar tu negocio o para dar información de contacto para tu profesión.</p>                    </p>
+                      <a href="pages/impresión.html" class="btn btn-primary">Ver más</a>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <img src="./images/img_calcos_pp.jpeg" class="card-img-top" alt="Calcos">
+                    <div class="card-body">
+                      <h5 class="card-title">Calcos</h5>
+                      <p class="card-text">Sin dudas, uno de los productos más buscados son las tarjetas de presentación, que pueden ser utilizas para promocionar tu negocio o para dar información de contacto para tu profesión.</p>
+                      <a href="pages/calcosyvinilos.html" class="btn btn-primary">Ver más</a>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <img src="./images/img_fotografia_pp.jpeg" class="card-img-top" alt="Conjunto de fotos">
+                    <div class="card-body">
+                      <h5 class="card-title">Fotografías</h5>
+                      <p class="card-text">Nuestro revelado de fotografías te ofrece una de las calidades más sobresalientes del mercado tanto en el material base como en sus colores.</p>
+                      <a href="pages/fotografia.html" class="btn btn-primary">Ver más</a>
+                    </div>
+                  </div>
+            </section>
+                <!-- <div class="card__body">
                     <img src="./images/img_tarjeteria_pp.jpeg" alt="Tarjetas personales">
                     <h4><a href="pages/impresión.html">Impresión de tarjetas</a></h4>
                     <p>Sin dudas, uno de los productos más buscados son las tarjetas de presentación, que pueden ser utilizas para promocionar tu negocio o para dar información de contacto para tu profesión.</p>
@@ -87,8 +112,7 @@
                     <img src="./images/img_fotografia_pp.jpeg" alt="Conjunto de fotos">
                     <h4><a href="pages/fotografia.html">Fotografías</a></h4>
                     <p>Nuestro revelado de fotografías te ofrece una de las calidades más sobresalientes del mercado tanto en el material base como en sus colores.</p>
-                </div>
-            </section>
+                </div> -->
         </main>
 
         <footer>
