--- a/pages/fotografia.html
+++ b/pages/fotografia.html
@@ -5,44 +5,46 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../css/style.css">
         <title>LOYD - Fotografía</title>
     </head>
 
     <body>
 
-        <header>
-            <div class="menu">
-                <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
-                    <div class="container-fluid">
-                      <a class="navbar-brand" href="#"><img src="../images/Loyd_logo.png" alt="Logo"/></a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                          <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Inicio</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../pages/fotografia.html">Fotografía</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="../pages/calcosyvinilos.html">Adhesivos</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="../pages/impresión.html">Impresión</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </nav>
-            </div>
-        </header>
+      <header>
+        <div class="menu">
+            <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="../index.html"><img src="../images/Loyd_logo.png" alt="Logo"/></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link" href="./index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./pages/fotografia.html">Fotografía</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./pages/calcosyvinilos.html">Adhesivos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./pages/impresión.html">Impresión</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+        </div>
+      </header>
+
 
         <main>
             <section class="fotografia__principal">
