--- a/pages/fotografia.html
+++ b/pages/fotografia.html
@@ -24,19 +24,19 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link" href="./index.html">Inicio</a>
+                        <a class="nav-link" href="../index.html">Inicio</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./pages/fotografia.html">Fotografía</a>
+                        <a class="nav-link active" aria-current="page" href="../pages/fotografia.html">Fotografía</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="./pages/calcosyvinilos.html">Adhesivos</a>
+                        <a class="nav-link" href="../pages/calcosyvinilos.html">Adhesivos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="./pages/impresión.html">Impresión</a>
+                        <a class="nav-link" href="../pages/impresión.html">Impresión</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                       </li>
                     </ul>
                   </div>
