--- a/pages/calcosyvinilos.html
+++ b/pages/calcosyvinilos.html
@@ -2,12 +2,18 @@
 <html lang="es">
 
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/png" href="../images/Loyd_logo_fav.png">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/style.css">
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- favicon -->
+      <link rel="icon" type="image/png" href="../images/Loyd_logo_fav.png">
+      <!-- cdn bootstrap estilos e iconos -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+      <!-- cdn aos animate -->
+      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+      <!-- css -->
+      <link rel="stylesheet" href="../css/style.css">
         <title>LOYD - Calcos y Vinilos</title>
     </head>
 
@@ -47,26 +53,26 @@
 
         <main>
             <section class="cyv__principal">
-                <img src="../images/img_ccc.jpeg" alt="Vinilos para frascos">
-                <div class="cyv__content">
+                <img src="../images/img_ccc.jpeg" alt="Vinilos para frascos" data-aos="flip-down">
+                <div class="cyv__content" data-aos="zoom-out">
                     <h1>Calcos y Vinilos</h1>
                     <p>Te presentamos la sección de adhesivos de nuestra imprenta. Ofrecemos una amplia variedad de materiales en los cuales puedas plasmar tus ideas e implementarlos sobre la superficie que vayas a colocar. Cada adhesivo tiene una función distinta, ya que algunos son transparentes, otros con mejor representación de color, varios resistentes al agua, y demás. Estamos para asesorarte sobre que material sería el mejor para tu proyecto, no dudes en consultarnos, pero para una mayor respuesta te dejamos información de lo que más requiere el publico y posiblemente sea lo ques estas buscando.
                 </div>
             </section>
             <section class="cyv__calco">
-                <div class="cyv__product__calco">
+                <div class="cyv__product__calco" data-aos="fade-left">
                     <h4>CALCOS</h4>
                     <p>Las calcos son los clásicos stickers troquelados (cortados por el borde) que se utilizan para decorar los termos para el mate, las carpetas escolares, se pueden usar para el packaging de los productos de un emprendimiento o también suelen utilizarse para los cumpleaños. Dichas calcos son impribles, es decir, que cualquier imagen que necesites se imprime sobre la hoja y sale tal cual fué enviado. Además, hay que tener en cuenta el material a imprimirse, si bien todos son adhesivos, la superficie compromete al resultado. Tenemos los clásicos stickers "comunes" los cuales sus colores son brillantes y pueden ser utilizados para packaging o cumpleaños, o tambien podes elegir aquellos resistentes al agua (aptos para ser mojados y lavados) que se requieren más para personalizar objetos.
                 </div>
-                <aside class="calco_img">
+                <aside class="calco_img" data-aos="fade-right">
                     <img src="../images/img_calcos_cyv.jpeg" alt="Calcos resistentes al agua">
                 </aside>
             </section>
             <section class="cyv__vinilo">
-                <aside class="vinilo_img">
+                <aside class="vinilo_img" data-aos="fade-left">
                     <img src="../images/img_vinilos_cyv.jpeg" alt="Vinilo dorado en vaso">
                 </aside>
-                <div class="cyv__product__vinilo">
+                <div class="cyv__product__vinilo" data-aos="fade-right">
                     <h4>VINILOS</h4>
                     <p>Por otra parte, los vinilos son adhesivos que vienen por color (por lo cual no son impribiles) y tienen una mayor duración en el tiempo y una vida util más alargada (dependiendo el uso que se le de). Estos, a diferencia de las calcos, son materiales plásticos y son solo troquelados por el contorno de cualquier figura, y pueden ser usados en exterior sin preocupación alguna. Cuentan con un papel transportados que te permite despegar todas las partes juntas del dseño de la base y colocarlo sobre la superficie sin tener que ir parte por parte.
                 </div>
@@ -75,15 +81,21 @@
 
         <footer>
             <nav>
-                <ul>
-                    <li><a href="https://wa.link/0nkrcs" target="_blank">Whatsapp</a></li>
-                    <li><a href="https://www.instagram.com/loyd_dei/" target="_blank">Instagram</a></li>
-                    <li><a href="https://www.facebook.com/profile.php?id=100067657323812" target="_blank">Facebook</a></li>
-                </ul>
+              <ul>
+                <li><a href="https://wa.link/0nkrcs" target="_blank"><i class="bi bi-whatsapp"></i></a></li>
+                <li><a href="https://www.instagram.com/loyd_dei/" target="_blank"><i class="bi bi-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100067657323812" target="_blank"><i class="bi bi-facebook"></i></a></li>
+            </ul>
             </nav>
             <p>© LoydStudio  |  By MarceAlvarez 2023.</p>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    </body>
+          </footer>
+          <!-- cdn bootstrap estilos -->
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+          <!-- cdn aos animate -->
+          <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+          <script>
+            AOS.init();
+          </script>
+      </body>
 
 </html>
