--- a/pages/impresión.html
+++ b/pages/impresión.html
@@ -5,8 +5,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- favicon -->
         <link rel="icon" type="image/png" href="../images/Loyd_logo_fav.png">
+        <!-- cdn bootstrap estilos e iconos -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+        <!-- cdn aos animate -->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <!-- css -->
         <link rel="stylesheet" href="../css/style.css">
         <title>LOYD - Impresión</title>
     </head>
@@ -47,8 +53,8 @@
 
         <main>
             <section class="imp__principal">
-                <img src="../images/img_impresion_principal.jpeg" alt="Sistema de tarjeteria">
-                <div class="imp__content">
+                <img src="../images/img_impresion_principal.jpeg" alt="Sistema de tarjeteria" data-aos="flip-down">
+                <div class="imp__content" data-aos="zoom-out">
                     <h1>Impresión</h1>
                     <p>Bienvenido a la sección de Loyd en la cual podrás hacer volar tu imaginación. El apartado impresión es el amplio ya que contamos con una amplia variedad de papeles y dos tipos de tecnologías de impresión.
                     <p>Como principal diferenciación del resto de las imprentas, te ofrecemos dos tecnologías de impresión y de esta manera ampliamos las posibilidades de acertar a tu trabajo y alcanzamos un mayor público en nuestra pequeña comunidad. Primeramente tenemos impresión a Tinta la cual nos va dar versatilidad en papeles mate, reduciendo además el costo, y mas que nada en impresiones que requieran un gran nivel de detalle (como por ejemplo las fotografías). Por otro lado, te ofrecemos impresión a Láser, la cual es la más buscada para aquellos proyectos que requieran colores más vivos, por ejemplo los Candy Bar o proyectos de identidad visual de alguna marca o de un profesional.
@@ -56,7 +62,7 @@
                 </div>
             </section>
             <section class="cards__imp">
-                <div class="card__imp__body">
+                <div class="card__imp__body" data-aos="flip-left">
                     <h4>PAPEL OBRA</h4>
                     <p>Papel obra es el papel "comun" con el que se suelen hacer las fotocopias o la impresión de folletos o volantes. Es el más económico de todo el stock y tambien los que tienen un grosor menor al resto, ya que su función no es perdurar mucho en el tiempo sino para ciertos eventos o apuntes de tus estudios. En su mayor escala de impresión, suele utilizarse el sistema a tinta ya que reduce costos y sumado al valor de dicho material, se pueden hacer copias de mayor volumen para proyectos que buscan calidad y bajo presupuesto. También puede ser impreso con tinta Láser para darle un acabado más elegante y colores que resalten mucho más.
                     <ul>
@@ -64,7 +70,7 @@
                         <li>90gr</li>
                     </ul>
                 </div>
-                <div class="card__imp__body">
+                <div class="card__imp__body" data-aos="flip-right">
                     <h4>PAPEL OPALINA</h4>
                     <p>La Opalina o Cartulina, es un papel mate al igual que el papel obra, pero cuenta con grosores más altos los cuales buscan más que nada, ser utilizados en el campo del packaging y tarjetería. Al ser papeles sin mucha intervención de capas y acabados al ser fabricados, también son de bajo presupuesto y te ofrecn una calidad alta y más aún si son impresos a tinta láser, ya que dan un acabado "Semi Brillo" en tu tarjetería que va a hacerlas resaltar.
                     <ul>
@@ -74,7 +80,7 @@
                         <li>300gr</li>
                     </ul>
                 </div>
-                <div class="card__imp__body">
+                <div class="card__imp__body" data-aos="flip-left">
                     <h4>PAPEL ILUSTRACIÓN</h4>
                     <p>Los Ilustración son los más buscados al momento de realizar proyectos de identidad visual o de tarjeteria o publicidad, ya que estos si o si necesitan ser impresos a tinta láser (la cual te recordamos que propociona colores mucho más nitidos y más precisos). Estos papeles son de acabado Glossy o Brillo y crean una experiancia muy grata con el usuario que recibe el producto, ya que gracias a este acabado de papel más tinta, resiste en cierto porcentaje, las salpicaduras de líquidos y suciedad, pudiendo ser limpiados con un paño por ejemplo.
                     <ul>
@@ -86,7 +92,7 @@
                         <li>350gr</li>
                     </ul>
                 </div>
-                <div class="card__imp__body">
+                <div class="card__imp__body" data-aos="flip-right">
                     <h4>PAPEL ADHESIVO</h4>
                     <p>Dentro de la papeleria adhesiva, tenemos una amplia variedad de productos que se pueden adaptar a tus necesidades. Obra, Kraft y Calco son papeles de acabado mate, mientras que los demás son Glossy, aunque los últimos cuatros son los que resisten al agua, algunos mas que otros. Te damos la posibilidad de pedir las planchas A4 de cualquiera de estos papeles ya troquelados de la forma que necesites, para facilitarte el despegue y mejorar la calidad y terminacion de los elemntos impresos.
                     <ul>
@@ -125,14 +131,20 @@
         <footer>
             <nav>
                 <ul>
-                    <li><a href="https://wa.link/0nkrcs" target="_blank">Whatsapp</a></li>
-                    <li><a href="https://www.instagram.com/loyd_dei/" target="_blank">Instagram</a></li>
-                    <li><a href="https://www.facebook.com/profile.php?id=100067657323812" target="_blank">Facebook</a></li>
+                    <li><a href="https://wa.link/0nkrcs" target="_blank"><i class="bi bi-whatsapp"></i></a></li>
+                    <li><a href="https://www.instagram.com/loyd_dei/" target="_blank"><i class="bi bi-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/profile.php?id=100067657323812" target="_blank"><i class="bi bi-facebook"></i></a></li>
                 </ul>
             </nav>
             <p>© LoydStudio  |  By MarceAlvarez 2023.</p>
         </footer>
+        <!-- cdn bootstrap estilos -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+        <!-- cdn aos animate -->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+          AOS.init();
+        </script>
     </body>
 
 </html>
