--- a/pages/fotografia.html
+++ b/pages/fotografia.html
@@ -14,7 +14,10 @@
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <!-- css -->
         <link rel="stylesheet" href="../css/style.css">
-        <title>LOYD - Fotografía</title>
+        <!-- seo -->
+        <title>Fotografía | Loyd</title>
+        <meta name description="description" content="Tus recuerdos serán guardados de la mejor manera, conservando su máxima calidad gracias a nuestros papeles exclusivos dedicados a la fotografía profesional.">
+        <meta name="keywords" content="CALIDAD, FOTOS, FOTO, CLASICA, POLAROID, IMPRESION.">
     </head>
 
     <body>
@@ -58,8 +61,8 @@
                 <div class="fotografia__content" data-aos="zoom-out">
                     <h1>Fotografía</h1>
                     <p>A lo largo del tiempo, la fotografía ha tomado distintos roles dentro de la sociedad, pero en todo momento se mantuvo la tradición de atesorar las imágenes como recuerdos familiares, eventuales, históricos, etc.
-                        Actualmente nos enfocamos en la fotografía como arte, pero nuestros clientes siguen guardando sus recuerdos en papel. Por eso te ofrecemos distintas posibilidades para conservar tus imagenes en la mejor calidad posible y asesoramiento sobre como conservarlas de la mejor manera para expandir la vida de tus recuerdos sin perder detalles.
-                        A continuación te presentamos dos tipos de revelado que llevamos a cabo para que puedas ver cual se adapta mejor a tus necesidades.
+                    Actualmente nos enfocamos en la fotografía como arte, pero nuestros clientes siguen guardando sus recuerdos en papel. Por eso te ofrecemos distintas posibilidades para conservar tus imagenes en la mejor calidad posible y asesoramiento sobre como conservarlas de la mejor manera para expandir la vida de tus recuerdos sin perder detalles.
+                    A continuación te presentamos dos tipos de revelado que llevamos a cabo para que puedas ver cual se adapta mejor a tus necesidades.
                 </div>
             </section>
             <section class="cards__fotografia">
