--- a/pages/impresión.html
+++ b/pages/impresión.html
@@ -14,7 +14,10 @@
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <!-- css -->
         <link rel="stylesheet" href="../css/style.css">
-        <title>LOYD - Impresión</title>
+        <!-- seo -->
+        <title>Impresión | Loyd</title>
+        <meta name description="description" content="Te ofrecemos dos tecnologías de impresón y muchos papeles para ampliar la variedad de posibilidades de encontrar un papel que se adapte mejor a tus necesidades.">
+        <meta name="keywords" content="IMPRESION, PAPELES, OPALINA, CARTULINA, OBRA, ILUSTRACION, BRILLO, ADHESIVO, A5, A4, A3.">
     </head>
 
     <body>
