--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html lang="es">
         
     <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- favicon -->
-      <link rel="icon" type="image/png" href="./images/Loyd_logo_fav.png">
-      <!-- cdn bootstrap estilos e iconos -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-      <!-- cdn aos animate -->
-      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-      <!-- css -->
-      <link rel="stylesheet" href="./css/style.css">
-        <title>Loyd Studio | Inicio </title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- favicon -->
+        <link rel="icon" type="image/png" href="./images/Loyd_logo_fav.png">
+        <!-- cdn bootstrap estilos e iconos -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+        <!-- cdn aos animate -->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <!-- css -->
+        <link rel="stylesheet" href="./css/style.css">
+        <!-- seo -->
+        <title>Loyd Imprenta | Inicio</title>
+        <meta name description="description" content="Loyd es una imprenta en donde haremos volar tu imaginación, te acompañamos desde el minuto cero en tus proyectos para que te sientas segur@ en todo momento y tomes la mejor decisión al momento de elegir un papel.">
+        <meta name="keywords" content="IMPRENTA, IMPRESION, HISTORIA, EMPRENDIMIENTO, LOYD, FOTOGRAFIAS, CALCOS.">
     </head>
 
     <body>
@@ -56,7 +59,7 @@
             <section class="article_container" data-aos="zoom-out">
                 <aside class= "article_container_main" data-aos="flip-left">
                     <h1>¡Bienvenid@!</h1>
-                    <p>Loyd imprenta es un espacio donde haremos volar tu imaginación, te acompañamos desde el minuto cero en tus proyectos de presentación para que te sientas segur@ en todo momento y tomes la mejor decición al momento de elegir un papel. Contamos con más de 10 años de experiencia en el rubro y de a pequeños pasos fuimos creciendo y hoy estamos a la disponibilidad de toda persona que nos necesite. Nuestro equipo cuenta con personal capacitado para atender, manipular maquinas y asesorarte; dentro de ellos, diseñadores, secretarios, técnicos y especialistas en papeles.
+                    <p>Loyd imprenta es un espacio donde haremos volar tu imaginación, te acompañamos desde el minuto cero en tus proyectos de presentación para que te sientas segur@ en todo momento y tomes la mejor decisión al momento de elegir un papel. Contamos con más de 10 años de experiencia en el rubro y de a pequeños pasos fuimos creciendo y hoy estamos a la disponibilidad de toda persona que nos necesite. Nuestro equipo cuenta con personal capacitado para atender, manipular maquinas y asesorarte; dentro de ellos, diseñadores, secretarios, técnicos y especialistas en papeles.
                 </aside>
                 <aside class= "article_container_ph" data-aos="flip-right">
                     <img src="./images/img_index_principal.jpg" alt="Frente del local comercial">
