--- a/pages/calcosyvinilos.html
+++ b/pages/calcosyvinilos.html
@@ -2,19 +2,22 @@
 <html lang="es">
 
     <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!-- favicon -->
-      <link rel="icon" type="image/png" href="../images/Loyd_logo_fav.png">
-      <!-- cdn bootstrap estilos e iconos -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-      <!-- cdn aos animate -->
-      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-      <!-- css -->
-      <link rel="stylesheet" href="../css/style.css">
-        <title>LOYD - Calcos y Vinilos</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- favicon -->
+        <link rel="icon" type="image/png" href="../images/Loyd_logo_fav.png">
+        <!-- cdn bootstrap estilos e iconos -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+        <!-- cdn aos animate -->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <!-- css -->
+        <link rel="stylesheet" href="../css/style.css">
+        <!-- seo -->
+        <title>Adhesivos | Loyd</title>
+        <meta name description="description" content="Personalizá tus cosas con nuestro stickers y calcos, diseños con colores vivos que te acompañarán en todo momento.">
+        <meta name="keywords" content="CALCOS, VINILOS, CALIDAD, DISEÑOS, ADHESIVOS, COLORES, RESISTENTE.">
     </head>
 
     <body>
