--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </aside>
             </section>
             <section class="article_historia">
-                <aside class="imagenes_h" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">>
+                <aside class="imagenes_h" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                     <img src="./images/img_historia_inicio1.jpeg" alt="Comienzos de Loyd compras">
                     <img src="./images/img_historia_inicio2.jpeg" alt="Comienzos de Loyd colocacion de vinilo">
                     <img src="./images/img_historia_inicio3.jpeg" alt="Comienzos de Loyd agenda de pedidos">
